--- a/index.html
+++ b/index.html
@@ -161,8 +161,11 @@
                                         <h2>About me</h2>
                                     </div>
                                     <div class="about_content_text">
-                                        <p>Cloud Engineer with over two years of experience troubleshooting, managing, updating software assets,
-					supporting IT infrastructures, and administering cloud services.
+                                        <p>I am seeking a challenging role in engineering management to contribute to strategic planning, team management, and process optimization. 
+						With a Master of Science in Engineering Management and a Bachelor of Science in Computer Science from the University of Massachusetts Lowell, 
+						I have gained valuable experience in data processing, cloud engineering, and software development through roles at RailPod and UKG. 
+						My skills range from programming languages such as Python and PostgreSQL to cloud platforms like GCP, as well as experience with tools like Jira, 
+						GitHub, and Splunk.
 					</p>
 
                                         <div class="divider1 m-top-10"></div>
@@ -171,13 +174,15 @@
                                             <h6><i class="fa fa-graduation-cap"></i> Education</h6>
                                             <ul>
                                                 <li><i class="fa fa-chevron-right"></i> University of Massachusetts, Lowell, MA </li>
+						<li> ● Master of Science in Engineering Management </li>
                                                 <li> ● Bachelor of Science in Computer Science </li>
                                             </ul>
                                         </div>
                                         <div class="about_content_item m-top-20">
                                             <h6><i class="fa fa-briefcase"></i> Work Experiences</h6>
                                             <ul>
-						                                    <li><i class="fa fa-chevron-right"></i> UKG | 2021</li>
+						<li><i class="fa fa-chevron-right"></i> RailPod Inc. | 2023</li>
+						<li><i class="fa fa-chevron-right"></i> UKG | 2021</li>
                                                 <li><i class="fa fa-chevron-right"></i> RailPod Inc. | 2019</li>
                                                 <li><i class="fa fa-chevron-right"></i> Peer Math Tutor, Middlesex Community College | 2018</li>
                                                 <li><i class="fa fa-chevron-right"></i> Market Basket | 2015</li>
@@ -252,18 +257,25 @@
                                     </div>
 
                                     <div class="portfolio_content_text">
+					<h1> Data Processor </h1>
+                                        <p>• Identify and rectify data discrepancies and inconsistencies, bolstering the efficacy of data processing utilized by over 
+					200 Railroads. 
+					• Utilize a suite of in-house developed software tools leveraging Python, SQL, Google Sheets, and JavaScript to 
+					conduct comprehensive data quality assessments, guaranteeing precision, thoroughness, and alignment with 
+					organizational and industry benchmarks.
+					• Manage concurrent requests from executives and tickets, ensuring timely resolutions through effective communication 
+					and adherence to SOPs.</p><br><br><br>
                                         <h1> Cloud Engineer </h1>
-                                        <p>
-                                          ● Responsible for deployment, configuration, and maintenance of hosted applications (Google Cloud
-                                            Platform)<br>
-                                          ● Manage and perform RCA for services downtimes by administering extensive diagnostics like thread dump
-                                            and heap dump.<br>
-                                          ● Resolve client incidents as well as internal cases in a timely manner.<br>
-                                          ● Create SQL Scripts to automate tasks for internal use.<br>
-                                          ● Collaborate with engineers to standardize and document standard operating procedures for external use.<br>
-                                          ● Perform API calls using Postman for functional tests, integration tests and regression tests.<br>
-                                          ● Implement advance troubleshooting dashboards using Grafana and Splunk</p><br><br><br>
-					                              <h1> Software Engineering Intern </h1>
+                                        <p>• Planned and implemented weekly express upgrades for servers in Australia, overseeing end-to-end releases, including 
+					scoping, planning, and execution by utilizing RightScale, Confluence, PostgreSQL, and Postman.
+					• Optimized a seamless migration of 50+ enterprise-level applications to GCP cloud infrastructure, ensuring zero 
+					downtime and improving system scalability by 35%.
+					• Managed and performed RCA for services downtimes by administering extensive diagnostics like thread dump and 
+					heap dump. Technologies: Java, Splunk and Grafana.
+					• Responsible for deployment, configuration, and maintenance of hosted applications (Google Cloud Platform).
+					• Engineered a multi-cloud architecture that improved system resilience by 30%, leveraging expertise in GCP to ensure 
+					high availability and disaster recovery across critical business applications.</p><br><br><br>
+					<h1> Software Engineering Intern </h1>
                                         <p> ● Design, develop and implement end user tools to enable clients to a analyze and visualize live data
 					                                     collected by autonomous railway inspection vehicles. Technologies: Python, PostgreSQL, Matplotlib <br>
                                              ● Participant in product development team as quality assurance member during product development, testing and release <br>
