--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 </div>
 
                                 <div class="home_btns m-top-40 text-center"> <!-- portfolio_btn text-center fix m-top-100 -->
-                                    <a href="https://harshypatel.github.io/website/resume/cloud_engineer_hp_2023.pdf" target="_blank" class="btn btn-primary"> Resume </a>
+                                    <a href="https://harshypatel.github.io/website/resume/Harsh_Patel_EM.pdf" target="_blank" class="btn btn-primary"> Resume </a>
                                 </div>
 
                                 <a class="mouse-scroll" href="#about">
@@ -240,12 +240,6 @@
                                                 <h5 class="m-top-30"> RailPod Inc. </h5>
                                             </div>
                                         </div>
-                                        <div class="col-sm-6">
-                                            <div class="portf_item_text branding xs-m-top-40">
-                                                <a href="https://www.middlesex.mass.edu/ace/math.aspx" target="_blank"><img src="assets/images/portfolio-2.jpg" alt="" /></a>
-                                                <h5 class="m-top-30"> Middlesex Community College, Bedford, MA </h5>
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div><!-- End off col-md-6  -->
@@ -257,37 +251,34 @@
                                     </div>
 
                                     <div class="portfolio_content_text">
-					<h1> Data Processor </h1>
+					<h1> Data Processor, RailPod </h1>
                                         <p>• Identify and rectify data discrepancies and inconsistencies, bolstering the efficacy of data processing utilized by over 
-					200 Railroads. 
+					200 Railroads. <br>
 					• Utilize a suite of in-house developed software tools leveraging Python, SQL, Google Sheets, and JavaScript to 
 					conduct comprehensive data quality assessments, guaranteeing precision, thoroughness, and alignment with 
-					organizational and industry benchmarks.
+					organizational and industry benchmarks.<br>
 					• Manage concurrent requests from executives and tickets, ensuring timely resolutions through effective communication 
 					and adherence to SOPs.</p><br><br><br>
-                                        <h1> Cloud Engineer </h1>
+                                        <h1> Cloud Engineer, UKG </h1>
                                         <p>• Planned and implemented weekly express upgrades for servers in Australia, overseeing end-to-end releases, including 
-					scoping, planning, and execution by utilizing RightScale, Confluence, PostgreSQL, and Postman.
+					scoping, planning, and execution by utilizing RightScale, Confluence, PostgreSQL, and Postman.<br>
 					• Optimized a seamless migration of 50+ enterprise-level applications to GCP cloud infrastructure, ensuring zero 
-					downtime and improving system scalability by 35%.
+					downtime and improving system scalability by 35%.<br>
 					• Managed and performed RCA for services downtimes by administering extensive diagnostics like thread dump and 
-					heap dump. Technologies: Java, Splunk and Grafana.
-					• Responsible for deployment, configuration, and maintenance of hosted applications (Google Cloud Platform).
+					heap dump. Technologies: Java, Splunk and Grafana.<br>
+					• Responsible for deployment, configuration, and maintenance of hosted applications (Google Cloud Platform).<br>
 					• Engineered a multi-cloud architecture that improved system resilience by 30%, leveraging expertise in GCP to ensure 
 					high availability and disaster recovery across critical business applications.</p><br><br><br>
-					<h1> Software Engineering Intern </h1>
+					<h1> Software Engineering Intern, RailPod </h1>
                                         <p> ● Design, develop and implement end user tools to enable clients to a analyze and visualize live data
-					                                     collected by autonomous railway inspection vehicles. Technologies: Python, PostgreSQL, Matplotlib <br>
-                                             ● Participant in product development team as quality assurance member during product development, testing and release <br>
-					                                   ● Quality assurance of client facing data by validating Lidar and Track data <br>
-	                                           ● Collaborate with Product Development and Customer Support teams on bug resolution and fulfilling customer requirements. <br>
-                                             ● Optimized data collection procedures and responsible for generating daily reports <br>
-                                             ● Presented findings and data to team to improve strategies and operations <br>
-                                             ● Used Amazon AWS EC2 terminal to perform tasks quickly and efficiently </p><br><br><br>
-                              					<h1> Peer Math Tutor </h1>
-                              					<p> ● Managed Math Center activity for up to 15 students at time <br>
-                                  					● Employ knowledge of mathematical concepts to help students learn and understand topic areas and terms <br>
-                                  					● Worked with students of various ages at different learning levels </p>
+					                                     collected by autonomous railway inspection vehicles. Technologies: Python, PostgreSQL, Matplotlib. <br>
+                                             ● Conducted meticulous Quality Assurance reviews for the Product Development team across all phases of product 
+						lifecycle, including development, testing and deployment of technological enhancements for the autonomous railway 
+						inspection vehicle. <br>
+	                                           ● Collaborated closely with Product Development and Customer Support teams to troubleshoot bugs and fulfill 
+						customer requirements, contributing to successful development and deployment of products. <br>
+                                             ● Developed a Python-based automation tool that streamlined the data collection process from diverse sources, reducing 
+						the time needed for weekly report generation by 30%. </p><br><br><br>
                                     </div>
                                 </div>
                             </div><!-- End off col-md-6  -->
