--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <div class="col-sm-6">
                                 <div class="home_text text-right">
                                     <h4>Harsh Patel</h4>
-                                    <h1 class="home_text"> Cloud Engineer </h1>  <!-- text-black  home_text -->
+                                    <h1 class="home_text"> Project Manager </h1>  <!-- text-black  home_text -->
                                 </div>
 
                                 <div class="home_btns m-top-40 text-center">
@@ -129,7 +129,7 @@
                                 </div>
 
                                 <div class="home_btns m-top-40 text-center"> <!-- portfolio_btn text-center fix m-top-100 -->
-                                    <a href="https://harshypatel.github.io/website/resume/Harsh_Patel_EM.pdf" target="_blank" class="btn btn-primary"> Resume </a>
+                                    <a href="https://harshypatel.github.io/website/resume/Harsh_Patel_PM.pdf" target="_blank" class="btn btn-primary"> Resume </a>
                                 </div>
 
                                 <a class="mouse-scroll" href="#about">
