--- a/index.html
+++ b/index.html
@@ -161,11 +161,12 @@
                                         <h2>About me</h2>
                                     </div>
                                     <div class="about_content_text">
-                                        <p>I am seeking a challenging role in engineering management to contribute to strategic planning, team management, and process optimization. 
-						With a Master of Science in Engineering Management and a Bachelor of Science in Computer Science from the University of Massachusetts Lowell, 
-						I have gained valuable experience in data processing, cloud engineering, and software development through roles at RailPod and UKG. 
-						My skills range from programming languages such as Python and PostgreSQL to cloud platforms like GCP, as well as experience with tools like Jira, 
-						GitHub, and Splunk.
+                                        <p>​Results-driven Project Manager and Cloud Engineer with a passion for driving end-to-end project 
+						execution and scalable infrastructure solutions.​ Combining technical expertise in cloud technologies, 
+						data processing, and software development with strong leadership skills to deliver high-impact results. 
+						Experienced in optimizing workflows, managing complex projects, and implementing cutting-edge cloud 
+						architectures. Seeking to leverage collaborative leadership and technical proficiency to tackle new 
+						challenges and drive innovation in the tech industry.
 					</p>
 
                                         <div class="divider1 m-top-10"></div>
@@ -406,7 +407,7 @@
                                         <div class="author_text text-right">
                                             <h5>Regards!</h5>
                                             <h1> Harsh Patel </h1>
-                                            <h6> Cloud Engineer </h6>
+                                            <h6> Project Manager </h6>
                                         </div>
                                         <div class="copyright text-right m-top-80">
                                             <p class="wow fadeInRight">Made by<a href="https://bootstrapthemes.co" target="_blank">Bootstrap Themes</a>2016. All Rights Reserved</p>
